# lostinmsh

./: .gitignore  LICENSE  README.md  manage.sh  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-plot.txt  requirements.txt  script.sh
.github/: dependabot.yml
.github/workflows/: docs.yaml  docs.yml  publish.yml  sphinx.yaml  test.yml  tests.yml
dev/: angles.py  main.py  t10.py  test.py
docs/: Makefile  aperiodic_monotile.ipynb  conf.py  examples.rst  index.rst  multiple_polygons.ipynb  requirements.txt  tutorial.ipynb  usage.ipynb  user_interface.rst
docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
lostinmsh/: __init__.py  border.py  boundary.py  circular_iterable.py  closest_points.py  compatibility.py  geometry.py  gmsh_context_manager.py  mesh.py  mesh_Tconform.py  mesh_border.py  mesh_lost.py  plot.py  polygon.py  smallest_boundary.py  type_alias.py
lostinmsh/geometry/: __init__.py  border.py  boundary.py  geometry.py  helper_type.py  polygon.py  smallest_boundary.py
lostinmsh/mesh/: __init__.py  context_manager.py  gmsh_context_manager.py  helper_type.py  mesh_border.py  mesh_boundary.py  mesh_lost.py  mesh_unst.py
lostinmsh/plot/: __init__.py  geometry.py  mesh.py
lostinmsh_bak/: __init__.py  circular_iterable.py  plot.py
lostinmsh_bak/geometry/: __init__.py  closest_points.py  helper_type.py
lostinmsh_bak/mesh/: helper_type.py  mesh_lost.py
script/: angles.py  aperiodic_monotile.py  bow_tie.py  cocotte_fleche.py  main.py  regular_polygon.py
tests/: angles.py  test_angles.py  test_aperiodic_monotile.py  test_cocotte_fleche.py
