[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lostinmsh"
authors = [
    { name = "Zoïs Moitier", email = "zois.moitier@ensta-paris.fr" },
    { name = "Camille Carvalho", email = "camille.carvalho@insa-lyon.fr" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = ["gmsh", "numpy"]

[project.urls]
Documentation = "https://zmoitier.github.io/lostinmsh/"
Source = "https://github.com/zmoitier/lostinmsh"

[project.optional-dependencies]
dev = ["docformatter[tomli]", "flit", "mypy", "pylint", "ruff"]
doc = [
    "ipython",
    "nbsphinx",
    "Sphinx",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "sphinx-copybutton",
]

[tool.ruff]
target-version = "py312"

[tool.docformatter]
recursive = true

[tool.mypy]
ignore_missing_imports = true
